tried to make some changes

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,8 @@
 h1{
     text-align: center;
     color: white;
-    font-family: 'Shadows Into Light', cursive;
-    
+    font-family: 'Yesteryear', cursive, serif;
+
 }
 #nav{
     font-size: medium;
@@ -160,10 +160,3 @@ footer{
     font-size: medium;
     font-family: Georgia, 'Times New Roman', Times, serif;  
 }
-
-
- 
-
- 
-
- 
